feat: add swagger documentation on comany routes
