# src/config/swagger.yaml
@@ -18,6 +18,7 @@ components:
 paths:
   /register:
     post:
+      summary: Create new user
       tags:
         - Auth
       requestBody:
@@ -45,7 +46,7 @@ paths:
               repeatPassword: "123123"
       responses:
         '200': 
-          description: User Registration.
+          description: Returns registered user information
           content:
             application/json:
               schema: 
@@ -63,6 +64,7 @@ paths:
                       email: "kosta@gmail.com"
   /login:
     post:
+      summary: Login user
       tags:
         - Auth
       requestBody:
@@ -82,7 +84,7 @@ paths:
               password: "123"
       responses:
         '200': 
-          description: User login.
+          description: Returns user token
           content:
             application/json:
               schema: 
@@ -94,8 +96,9 @@ paths:
                       token: "eyJhbGciOiJIU1NzA0MzQyOCwiZX-E7VSXu7C2ZcT-uyCyjzXp2FiNrs_xCKwV8"
   /user:
     get:
+      summary: Get user information
       tags:
-        - User Information
+        - Auth
       security:
         - bearerAuth: []
       responses:
@@ -115,4 +118,176 @@ paths:
                   example:
                     _id: "62c2ef14dc41eb120af63460"
                     username: "kosta"                             
-                    email: "kosta@gmail.com"                             
+                    email: "kosta@gmail.com"
+  /api/companies:
+    post:
+      summary: Create new company
+      tags:
+        - Company
+      security:
+        - bearerAuth: []  
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  required: true
+                url:
+                  type: string
+                  required: true
+                logo:
+                  type: string
+                  required: true
+                date:
+                  type: string
+                  required: true  
+            example:
+              name: Facebook
+              url: "https://www.facebook.com"              
+              logo: "https://static.remove.bg/remove-bg-web/5c20.jpg"
+              date: "2010-09-09"
+      responses:
+        '200': 
+          description: Returns created company ID
+          content:
+            application/json:
+              schema: 
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                  example:
+                      _id: "62ce9437c5089e55c98fe144"
+  /api/companies/{companyId}:
+    get:
+      summary: Get company information
+      tags:
+        - Company
+      security:
+        - bearerAuth: []      
+      parameters:
+        - in: path
+          name: companyId
+          required: true
+          type: ObjectId
+          minimum: 1
+          description: Company ID is required
+      responses:
+        '200': 
+          description: Returns information of company with employees
+          content:
+            application/json:
+              schema: 
+                  type: object
+                  properties:                  
+                    _id:
+                      type: string
+                    name:
+                      type: string
+                    url:
+                      type: string
+                    date:
+                      type: string
+                    employee:
+                      type: array
+                  example:
+                    _id: "62c2ef14dc41eb120af63460"
+                    name: "Facebook"                             
+                    url: "https://www.facebook.com/"                  
+                    logo: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg"                  
+                    date: "Thu Sep 09 2010 04:00:00 GMT+0400 (Georgia Standard Time)"
+                    employees: []
+  /api/companies/:
+    get:
+      summary: Get all companies
+      tags:
+        - Company
+      security:
+        - bearerAuth: []
+      responses:
+        '200': 
+          description: Returns all registered companies
+          content:
+            application/json:
+              schema: 
+                  type: array
+                  items: 
+                    type: object
+                    properties:                  
+                      _id:
+                        type: string
+                      name:
+                        type: string
+                      url:
+                        type: string
+                      logo:
+                        type: string
+                      date:
+                        type: string
+                    example:
+                      _id: "62c2ef14dc41eb120af63460"
+                      name: "Facebook"                             
+                      url: "https://www.facebook.com/"                  
+                      logo: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg"                  
+                      date: "Thu Sep 09 2010 04:00:00 GMT+0400 (Georgia Standard Time)"
+  /api/companies/{companyId}/:
+    put:
+      summary: Update company
+      tags:
+        - Company
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: companyId
+          required: true
+          type: ObjectId
+          minimum: 1
+          description: Company ID is required  
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  required: true
+                url:
+                  type: string
+                  required: true
+                logo:
+                  type: string
+                  required: true
+                date:
+                  type: string
+                  required: true  
+            example:
+              name: Facebook
+              url: "https://www.facebook.com"              
+              logo: "https://static.remove.bg/remove-bg-web/5c20.jpg"
+              date: "2010-09-09"
+      responses:
+        '200': 
+          description: Returns updated company information
+          content:
+            application/json:
+              schema: 
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                    url:
+                      type: string
+                    logo:
+                      type: string
+                    date:
+                      type: string
+                  example:
+                      name: "Facebook"                             
+                      url: "https://www.facebook.com/"                  
+                      logo: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg"                  
+                      date: "Thu Sep 09 2010 04:00:00 GMT+0400 (Georgia Standard Time)"                
